--- a/app.json
+++ b/app.json
@@ -10,7 +10,10 @@
     "newArchEnabled": true,
     "ios": {
       "supportsTablet": true,
-      "bundleIdentifier": "com.lukeekim.animationpractice"
+      "bundleIdentifier": "com.lukeekim.animationpractice",
+      "infoPlist": {
+        "ITSAppUsesNonExemptEncryption": false
+      }
     },
     "android": {
       "adaptiveIcon": {
@@ -39,6 +42,13 @@
     ],
     "experiments": {
       "typedRoutes": true
-    }
+    },
+    "extra": {
+      "router": {},
+      "eas": {
+        "projectId": "072ad6ae-ac29-4162-9b73-2bbbc45d6fd3"
+      }
+    },
+    "owner": "lukeekim"
   }
 }
