--- a/package.json
+++ b/package.json
@@ -3,11 +3,16 @@
   "main": "expo-router/entry",
   "version": "1.0.0",
   "scripts": {
-    "start": "expo start --clear",
+    "start": "npx expo start --clear",
     "update-native": "npx expo prebuild --clean",
     "reset-project": "node ./scripts/reset-project.js",
-    "android": "expo run:android",
-    "ios": "expo run:ios",
+    "android": "npx expo run:android",
+    "ios": "npx expo run:ios --device",
+    "ios-develop-build": "eas build --platform ios --profile ios-simulator",
+    "android-develop-build": "eas build --platform android --profile development-simulator",
+    "code-push-preview": "eas update --channel preview --message \"$npm_config_message\"",
+    "code-push-production": "eas update --channel production --message \"$npm_config_message\"",
+    "check-type": "tsc --noEmit",
     "web": "expo start --web",
     "lint": "expo lint"
   },
@@ -40,7 +45,8 @@
     "react-native-screens": "~4.11.1",
     "react-native-web": "~0.20.0",
     "react-native-webview": "13.13.5",
-    "react-native-worklets": "^0.4.1"
+    "react-native-worklets": "^0.4.1",
+    "expo-dev-client": "~5.2.4"
   },
   "devDependencies": {
     "@babel/core": "^7.25.2",
