--- a/package.json
+++ b/package.json
@@ -47,7 +47,9 @@
     "react-native-screens": "~4.11.1",
     "react-native-web": "~0.20.0",
     "react-native-webview": "13.13.5",
-    "react-native-worklets": "^0.4.1"
+    "react-native-wgpu": "^0.2.1",
+    "react-native-worklets": "^0.4.1",
+    "wgpu-matrix": "^3.4.0"
   },
   "devDependencies": {
     "@babel/core": "^7.25.2",
